--- a/JonnyPearce_GuidedCapstone_04_preprocessing_and_training.ipynb
+++ b/JonnyPearce_GuidedCapstone_04_preprocessing_and_training.ipynb
@@ -4780,7 +4780,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: \n",
+    "## Summary\n",
+    "`### Steps taken<br>\n",
+    ">-  Extracted Big Mountain Resort data from dataset for later use.<br>\n",
+    ">-  Created a 70/30 training/test split of the dataset.<br>\n",
+    ">-  Gained a baseline idea of performance by using the mean of the average price as a predictor.<br>\n",
+    ">-  Used SKLearn and dummy regressor to test this, which returned a mean absolute error of usdollars19 (ie, would be off by this amount if used to mean ticket price to guess prices).<br>\n",
+    ">-  Built a linear model, and imputed missing values using both median and mean (not much difference between the two).<br>\n",
+    ">-  Used SKLearn pipeline component to build linear regression model, and fitted, tested and assessed performance – matched earlier work.<br>\n",
+    ">-  Refined the model to select varying numbers of features by using cross-validation, which showed 8 was the best number of features, which were identified as:<br>\n",
+    "    >-  Vertical drop<br>\n",
+    "    >-  Snow making area<br>\n",
+    "    >-  Total chairs<br>\n",
+    "    >-  Fast quads<br>\n",
+    "    >-  Runs<br>\n",
+    "    >-  Longest runs<br>\n",
+    "    >-  Trams<br>\n",
+    "    >-  Skiable terrain<br>\n",
+    ">-  The vertical drop and the snow-making area were the two biggest positive features and trams and skiable terrain were negatively correlated.<br>\n",
+    ">-  Then used a Random Forest Model, which pulled out the top four features as:<br>\n",
+    "    >-  Fast quads<br>\n",
+    "    >-  Runs<br>\n",
+    "    >-  Snow-making area<br>\n",
+    "    >-  Vertical Drop.<br>\n",
+    ">-  Slightly improved cross-validation scores compared to the default model.<br>\n",
+    ">-  The random forest model has a lower cross-validation mean absolute error by almost USdollars1. It also exhibits less variability.Verifying performance on the test set produces performance consistent with the cross-validation results. Therefore, we will use the random forest model going forwards.<br>\n",
+    ">-  Finally did a data quantity assessment, which suggests we seem to have plenty of data. There's an initial rapid improvement in model scores as expected, but it levels off by around a sample size of 40-50.<br>\n"
    ]
   }
  ],
