--- a/JonnyPearce_GuidedCap_05_modeling.ipynb
+++ b/JonnyPearce_GuidedCap_05_modeling.ipynb
@@ -1976,7 +1976,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 1** Your answer here"
+    "**A: ## Results Summary\n",
+    "`Big Mountain Resort currently charges a fixed rate of 81 dollars per day, irrespective of it being a weekday or weekend. There is mixed practice within the sector related to varying rates across weekdays and weekends, but BMR's practice is not unusual in this respect.<br>\n",
+    "\n",
+    "Our modelled prices suggested a BMR price of just under 96 dollars. Even allowing for the expected mean absolute error of c 10 dollars, this suggests there is room for an increase. However, it may be that we are lacking data on some aspects of the market and how other resorts price their tickets, or the expenditure/operating costs they incur.<br>\n",
+    "\n",
+    "Looking at the sector as whole, BMR's pricing is towards the upper end of the sector's scale (and is in fact the highest in Montana) so an increase needs to be bases on a sound evaluation of the key marketable features of BMR. When we looked at the features, BMR scores highly in all the categories that are considered key.<br>\n",
+    "\n",
+    "We modelled the scenarios requested by management, with the following outcomes:<br>\n",
+    "\n",
+    "-  closing runs reduces the ticket pricing opportunities and hence revenue also drops. Ticket prices drop by c0.75 dollars when three runs are closed, but plateaus at this level for 4 and 5 runs being drop. It would be possible to drop one run without affecting the price, and it make be acceptable to take a financial hit by closing 5 runs, but beyond further run closures is detrimental.<br>\n",
+    "-  adding a run, increasing the drop and installing an additional chair lift provides the opportunity of an uplift in ticket price of 2 dollars, equating to an increased annual revenue of 3.5m dollars.<br>\n",
+    "-  marginal or minmal increase in snow-making area or lenght of runs make no or minimal difference.<br>\n",
+    "<br>\n",
+    "It's recommended that further exploration is carried out on scenario 2, with additional exploration of the cost savings from closing up to 5 runs. The c1.5m cost of investing in a new chair lift would be more than covered by the additional revenue from an additional run, by a factor of 2:1.\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -1997,7 +2012,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**A: 2** Your answer here"
+    "**A: ## Further considerations\n",
+    "`It would be good to have more information and data on other price-related issues for ski visitors, such as any hire costs, additional pricing and average spend while at the individual resorts. It would also be useful to have more information on the operating costs per visitors, and any necessary investment that would be required to increase numbers. Information on segmentation of visitors would be useful or consideration of whether this is an opportunity, eg, having differential pricing for those visitors who take advantage of the main features of BMR compared to those who don't, eg, novices versus experience, young versus older skiers, etc. It would also be useful to get more information on visitor number and the spread or distribution of these re skiable days across the sector as a whole, along with more information on visitor demographics, and how visitor numbers fit with the catchment areas represented by each region (eg, how far on average to do people travel for skiing visits/holdiday?).<br>\n",
+    "Armed with some of the above information, it would be useful to explore some of BMR's nearest competitors to assess their pricing strategies, and understand any sensitivies on increasing prices and the impact on market share. BMR's pricing is already relatively high in the sector, and there may only be scope to increase prices if market leading featues are retained and enhanced.<br>\n",
+    "The model developed could be useful for exploring this issues, but needs refinement with the additional data, and with training could be made available to management to explore the impact of enhancements or cost-saving actions at BMR. "
    ]
   }
  ],
